--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -12,3 +12,6 @@ product_list:
     path: /productos
     controller: App\Controller\ProductController::listProducts    
 
+contact:
+    path: /contacto
+    controller: App\Controller\ContactController::contact
